обновил зависимости для JDK 21